Ticket #2571 (closed defect: fixed)

Opened 8 years ago

Last modified 6 months ago

wxLocale::GetSystemEncodingName() returns empty string under OS X

Reported by: pitrou Owned by: csomor
Priority: low Milestone:
Component: wxOSX (any toolkit) Version: 2.9-svn
Keywords: simple Cc: pitrou, csomor
Blocked By: Patch: no
Blocking:

Description

On MacOS X, wx.Locale.GetSystemEncodingName() returns
the empty string whereas wx.Locale.GetSystemEncoding()
returns the proper value.

This is a problem when you need to use the standard
Python methods unicode.encode() and str.encode(). They
expect the literal name of the encoding (e.g.
('utf-8')), not a wx-custom numeric values.

GetSystemEncodingName() does return the proper value
under Linux and Windows.

Attachments

2571.patch download (1.0 KB) - added by oneeyeman 6 months ago.
Ticket implementation

Change History

Changed 5 years ago by wxsite

  • status changed from assigned to confirmed

transitioning old 'assigned' status to new 'confirmed' status

Changed 7 months ago by oneeyeman

Calling this function on Mac OSX Snow Leopard on Cocoa minimal gives the string "Message".

However the documentation says that it shouldn't be used by the client code.

Changed 7 months ago by vadz

  • keywords simple added
  • priority changed from normal to low
  • version set to 2.9-svn
  • component changed from wxOSX-Carbon to wxOSX (any toolkit)
  • summary changed from wx.Locale.GetSystemEncodingName() empty to wxLocale::GetSystemEncodingName() returns empty string under OS X

I have no idea where does "Message" come from but the comment in this function does say that it intentionally returns an empty string under OS X. I don't see why would this be useful behaviour though. It seems we should return

CFStringGetNameOfEncoding(CFStringGetSystemEncoding())

from there, shouldn't we?

Changed 7 months ago by oneeyeman

Vadim,

I think you are wrong.

I don't know much but it seems that according to  https://developer.apple.com/library/mac/#documentation/CoreFoundation/Reference/CFStringRef/Reference/reference.html

an application needs to call GetApplicationTextEncoding().

Changed 6 months ago by vadz

I don't believe we need to use GetApplicationTextEncoding() here but wx API is insufficient here anyhow, we need to have more precise functions. For now returning the encoding corresponding to the user's preferred language seem to be consistent with GetACP() under Windows (which is itself probably wrong however...).

Changed 6 months ago by oneeyeman

I tried to make a patch for Vadim's suggestion, but failed.

I will leave it for someone who is more familiar with wxCocoa internals.

Changed 6 months ago by oneeyeman

Ticket implementation

Changed 6 months ago by oneeyeman

Attached please find the implementation suggested by Vadim.

Tested on Cocoa build against 10.6 SDK.

On my Mac it returns "Western (Mac OS Roman)".

Changed 6 months ago by VZ

  • status changed from confirmed to closed
  • resolution set to fixed

(In [72985]) Implement wxLocale::GetSystemEncodingName() for wxOSX.

Use CFStringGetNameOfEncoding() to get the canonical name of the encoding from
OS X itself.

Closes #2571.

Note: See TracTickets for help on using tickets.