Implement wxLocale::GetSystemEncodingName() for wxOSX.

Use CFStringGetNameOfEncoding() to get the canonical name of the encoding from
OS X itself.

Closes #2571.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72985 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775